LiveText-LiveText3.14/src/objects/Conversation_Header__c.object
<CustomObject>
    <description>LiveText Session</description>
    <fields>
        <fullName>AcceptedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who accepted the conversation.</description>
        <label>Accepted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Text_Session_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_Time__c</fullName>
        <description>Will be updated by workflow.</description>
        <label>Activated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConversationReopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether conversation is re-opened or not by default this is set to false</description>
        <label>ConversationReopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConversationType__c</fullName>
        <label>ConversationType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversation_Identifier__c</fullName>
        <description>Conversation Unique Identifier</description>
        <label>Conversation Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <description>Calculates elapsed time since record creation.</description>
        <formula>floor((NOW() -  SessionReopenedTime__c)* 1440*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ElapsedTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Chat_Message__c</fullName>
        <formula>Support_Number__r.Chat_End_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Chat Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndedTime__c</fullName>
        <description>Records the time that a text session was ended</description>
        <inlineHelpText>Records the time that a text session was ended</inlineHelpText>
        <label>EndedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Formatted_Originating_Number_To_Display__c</fullName>
        <description>Formatted Originating Number for international numbers using google js lib</description>
        <label>Formatted Originating Number To Display</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Originating_Number__c</fullName>
        <formula>IF((LEN(Formatted_Originating_Number_To_Display__c) = 0 || Formatted_Originating_Number_To_Display__c = null),  Originating_Number__c, Formatted_Originating_Number_To_Display__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Originating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Transcript_1__c</fullName>
        <description>Formatted version of the transcript summary 1 field</description>
        <label>Transcript 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Formatted_Transcript_2__c</fullName>
        <description>Formatted version of the transcript summary 2 field</description>
        <label>Transcript 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HandleTime__c</fullName>
        <formula>floor((  EndedTime__c   -   CreatedDate )* 1440*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HandleTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HandledBy__c</fullName>
        <formula>IF(AcceptedBy__c=&quot;&quot;,
        IF(OR(ISPICKVAL(Status__c,&apos;Active&apos;), ISPICKVAL(Status__c, &apos;Ended&apos;)), (LastModifiedBy.FirstName + &quot; &quot; +   LastModifiedBy.LastName)  , null),
        (AcceptedBy__r.FirstName + &quot; &quot; + AcceptedBy__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HandledBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_Alaska_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Alaska Standard Time (AKST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 9/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Alaska Standard Time (AKST) time zone.</inlineHelpText>
        <label>Hour (Alaska Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Central_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Central Daylight Savings (CDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Central Daylight Savings (CDT) time zone.</inlineHelpText>
        <label>Hour (Central Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Central_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Central Standard Time (CST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 6/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Central Standard Time (CST) time zone.</inlineHelpText>
        <label>Hour (Central Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Eastern_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Eastern Daylight Savings (EDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 4/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Eastern Daylight Savings (EDT) time zone.</inlineHelpText>
        <label>Hour (Eastern Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Eastern_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Eastern Standard Time (EST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Eastern Standard Time (EST) time zone.</inlineHelpText>
        <label>Hour (Eastern Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Hawaii_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Hawaii Standard Time (HST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 10/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Hawaii Standard Time (HST) time zone.</inlineHelpText>
        <label>Hour (Hawaii Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Mountain_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Mountain Daylight Savings (MDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 6/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Mountain Daylight Savings (MDT) time zone.</inlineHelpText>
        <label>Hour (Mountain Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Mountain_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Mountain Standard Time (MST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 7/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Mountain Standard Time (MST) time zone.</inlineHelpText>
        <label>Hour (Mountain Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Pacific_Daylight_Savings_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Pacific Daylight Savings (PDT) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 7/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Pacific Daylight Savings (PDT) time zone.</inlineHelpText>
        <label>Hour (Pacific Daylight Savings Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Pacific_Standard_Time__c</fullName>
        <description>Displays the hour a text session header was created for the Pacific Standard Time (PST) time zone.</description>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 8/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the hour a text session header was created for the Pacific Standard Time (PST) time zone.</inlineHelpText>
        <label>Hour (Pacific Standard Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead lookup</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveTextPhoneNumberLabel__c</fullName>
        <formula>Support_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveTextPhoneNumberLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText_Number__c</fullName>
        <formula>Support_Number__r.Formatted_Support_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveText Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessagePreview__c</fullName>
        <label>MessagePreview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline_Hours_Message__c</fullName>
        <formula>Support_Number__r.Offline_Hours_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offline Hours Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Conversation_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Number__c</fullName>
        <description>Number from which the SMS has been generated.</description>
        <label>Originating Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Instance__c</fullName>
        <formula>MID( $Api.Enterprise_Server_URL_310, 9, 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionReopenedTime__c</fullName>
        <description>Records the time that a text session is re-opened</description>
        <inlineHelpText>Records the time that a text session is re-opened</inlineHelpText>
        <label>SessionReopenedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support number that is LiveText enabled.</description>
        <label>Support Number</label>
        <referenceTo>LiveText_Number__c</referenceTo>
        <relationshipName>Conversation_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeDifference__c</fullName>
        <description>&quot;Time Difference between
current time and CreatedDate of record.
difference calculated in days.&quot;</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeDifference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeDiffrence__c</fullName>
        <description>&quot;Time Difference between
current time and CreatedDate of record.
diffrence calculated in days.&quot;</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeDiffrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transcript_Summary_1__c</fullName>
        <label>Transcript Summary1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transcript_Summary_2__c</fullName>
        <label>Transcript Summary2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnNormalized_LiveText_Number__c</fullName>
        <formula>IF(LEN(LiveText_Number__c )&gt;9,MID(LiveText_Number__c,3,15),LiveText_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UnNormalized LiveText  Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnNormalized_Orginating_Number__c</fullName>
        <formula>MID(Formatted_Originating_Number__c,3,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UnNormalized Orginating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if agent accepts record.</description>
        <label>isAccepted</label>
        <type>Checkbox</type>
    </fields>
    <label>LiveText Session</label>
    <listViews>
        <fullName>All_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Originating_Number__c</columns>
        <columns>LiveText_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Text Sessions</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Originating_Number__c</columns>
        <columns>LiveText_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Text Sessions</label>
    </listViews>
    <listViews>
        <fullName>My_Ended_Text_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Originating_Number__c</columns>
        <columns>LiveText_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ended</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Conversation_Header__c.Ended_Text_Sessions</value>
        </filters>
        <label>My Ended Text Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>LiveText Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveText Sessions</pluralLabel>
    <recordTypes>
        <fullName>Ended_Text_Sessions</fullName>
        <active>true</active>
        <description>Record to be displayed for ended chats.</description>
        <label>Ended Text Sessions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>